--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ yarn_mappings=1.20.4+build.3
 loader_version=0.15.9
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=0.0.4a
 maven_group=com.elmfer.cnmcu
 archives_base_name=cnmcu
 
