--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -66,6 +66,9 @@ jobs:
         with:
           distribution: "temurin"
           java-version: 17
+          
+      - name: Make Gradle Wrapper Executable
+        run: chmod +x ./gradlew
 
       - name: Save Version
         run: ./gradlew saveVersion
