--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,12 +9,13 @@ env:
   MODRINTH_TOKEN: ${{ secrets.PUBLISH_MODRINTH_TOKEN }}
   CURSEFORGE_TOKEN: ${{ secrets.PUBLISH_CURSEFORGE_TOKEN }}
   GITHUB_TOKEN: ${{ secrets.PUBLISH_GITHUB_TOKEN }}
+  PRODUCTION: true
 
 permissions:
   contents: write
 
 jobs:
-  Build-Publish:
+  Linux-Build-Publish:
     runs-on: ubuntu-latest
 
     steps:
@@ -31,10 +32,10 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Save Version
-        run: ./gradlew saveVersion
+        run: ./gradlew saveVersion --console=plain
 
       - name: Build Mod
-        run: ./gradlew clean build
+        run: ./gradlew clean build --console=plain
 
       - name: Publish Mod (CurseForge/Modrinth/GitHub)
         uses: Kir-Antipov/mc-publish@v3.3
@@ -53,25 +54,12 @@ jobs:
           
           loaders: fabric
           game-versions: "${{ env.MINECRAFT_VERSION }}"
-          
-  Linux-BuildNatives:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Setup Java
-        uses: actions/setup-java@v2
-        with:
-          distribution: "temurin"
-          java-version: 17
-          
-      - name: Make Gradle Wrapper Executable
-        run: chmod +x ./gradlew
-
-      - name: Save Version
-        run: ./gradlew saveVersion
 
       - name: Compile Natives
-        run: ./gradlew compileNatives
+        run: ./gradlew compileNatives --console=plain
+
+      - name: Upload Linux Binary
+        uses: softprops/action-gh-release@v2
+        with:
+          files: build/natives/libcnmcu*
+          tag_name: "${{ env.MOD_VERSION }}-${{ env.MINECRAFT_VERSION }}"
