MeshLoader interface to use with assimp

--- a/src/main/cpp/CMakeLists.txt
+++ b/src/main/cpp/CMakeLists.txt
@@ -9,6 +9,16 @@ set(MOD_ID "cnmcu")
 
 project("${MOD_ID}-natives")
 
+set(ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT OFF CACHE BOOL " " FORCE)
+set(ASSIMP_BUILD_PLY_IMPORTER ON  CACHE BOOL " " FORCE) #Only enable ply importer
+set(ASSIMP_NO_EXPORT          ON  CACHE BOOL " " FORCE)
+set(ASSIMP_BUILD_TESTS        OFF CACHE BOOL " " FORCE)
+set(ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE BOOL " " FORCE)
+set(ASSIMP_INSTALL            OFF CACHE BOOL " " FORCE)
+set(ASSIMP_BUILD_ZLIB         ON  CACHE BOOL " " FORCE)
+set(BUILD_SHARED_LIBS         OFF CACHE BOOL " " FORCE)
+add_subdirectory("dep/assimp")
+
 find_package(Java REQUIRED)
 set(JAVA_AWT_LIBRARY NotNeeded)
 set(JAVA_JVM_LIBRARY NotNeeded)
@@ -19,6 +29,7 @@ file(GLOB JNI_BRIDGE_SOURCES "bridge/*.cpp")
 set(PROJECT_SOURCES 
   cnmcu/mos6502.cpp
   cnmcu/Nano.cpp
+  cnmcu/MeshLoader.cpp
 
   ${JNI_BRIDGE_SOURCES}
   bridge/cnmcuJava.cpp
@@ -30,9 +41,15 @@ set(PROJECT_INCLUDES
   ${JNI_INCLUDE_DIRS}
 )
 
+set(PROJECT_LIBRARIES
+  assimp
+)
+
 add_library(${PROJECT_NAME} SHARED ${PROJECT_SOURCES})
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_INCLUDES})
+
+target_link_libraries(${PROJECT_NAME} ${PROJECT_LIBRARIES})
 
 # force off-tree build
 if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
