assimp compile without treating errors as warnings

--- a/src/main/cpp/CMakeLists.txt
+++ b/src/main/cpp/CMakeLists.txt
@@ -17,6 +17,7 @@ set(ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE BOOL " " FORCE)
 set(ASSIMP_INSTALL            OFF CACHE BOOL " " FORCE)
 set(ASSIMP_BUILD_ZLIB         ON  CACHE BOOL " " FORCE)
 set(BUILD_SHARED_LIBS         OFF CACHE BOOL " " FORCE)
+set(ASSIMP_WARNINGS_AS_ERRORS OFF CACHE BOOL " " FORCE)
 add_subdirectory("dep/assimp")
 
 find_package(Java REQUIRED)
