--- a/src/main/cpp/CMakeLists.txt
+++ b/src/main/cpp/CMakeLists.txt
@@ -20,6 +20,7 @@ set(PROJECT_SOURCES
   cnmcu/mos6502.cpp
   cnmcu/Nano.cpp
   cnmcu/MeshLoader.cpp
+  cnmcu/CNUART.cpp
 
   ${JNI_BRIDGE_SOURCES}
   bridge/cnmcuJava.cpp
