--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -60,6 +60,8 @@ jobs:
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
+        with:
+          dependency-graph: generate-and-submit
 
       - name: Save Version
         run: ./gradlew saveVersion --console=plain
