--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,33 +17,14 @@ permissions:
 jobs:
   validate:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Validate Gradle wrapper
         uses: gradle/actions/wrapper-validation@v3
   build:
-    strategy:
-      matrix:
-        include:
-          - os: ubuntu-latest
-            files: |
-              build/natives/libcnmcu*
-              vasm/vasm6502_oldstyle-linux-x64
-              vasm/vobjdump-linux-x64
-          - os: windows-latest
-            files: |
-              build/natives/Release/libcnmcu*
-              vasm/vasm6502_oldstyle-windows-x64.exe
-              vasm/vobjdump-windows-x64.exe
-              vasm/cygwin1.dll
-          - os: macos-latest
-            files: |
-              build/natives/libcnmcu*
-              vasm/vasm6502_oldstyle-macos-x64
-              vasm/vobjdump-macos-x64
-
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     needs: validate
 
     steps:
@@ -92,6 +73,44 @@ jobs:
           
           loaders: fabric
           game-versions: "${{ env.MINECRAFT_VERSION }}"
+  natives:
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+            files: |
+              build/natives/libcnmcu*
+              vasm/vasm6502_oldstyle-linux-x64
+              vasm/vobjdump-linux-x64
+          - os: windows-latest
+            files: |
+              build/natives/Release/libcnmcu*
+              vasm/vasm6502_oldstyle-windows-x64.exe
+              vasm/vobjdump-windows-x64.exe
+              vasm/cygwin1.dll
+          - os: macos-latest
+            files: |
+              build/natives/libcnmcu*
+              vasm/vasm6502_oldstyle-macos-x64
+              vasm/vobjdump-macos-x64
+
+    runs-on: ${{ matrix.os }}
+    needs: build
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+      
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: "temurin"
+          java-version: ${{ env.JAVA_VERSION }}
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
 
       - name: Compile Natives
         run: ./gradlew compileNatives --console=plain
